--- a/src/components/Grid.module.css
+++ b/src/components/Grid.module.css
@@ -1,8 +1,9 @@
 .container {
-    height: 660px;
+    /* height: 660px; */
     display: grid;
     grid-template-columns: repeat(30, 20px);
     grid-template-rows: repeat(30, 20px);
+    /* column-gap: 2px; */
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
@@ -18,28 +19,54 @@
 }
 
 .gridCell {
+  border-radius: 3px;
     width: 20px;
     height: 20px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    transition: background-color 0.1s, border-color 0.3s;
+    cursor: pointer;
+    
 }
+
 
 @media (prefers-color-scheme: light) {
     .gridCell {
-      border: 1px solid#e2e2e2;
-      background-color: #ffffff;
+      /* border: 1px solid#e2e2e2; */
+      border: 1px solid#d3d3d3;
+      /* background-color: #ffffff; */
+      background-color: #f0f0f0 ;
     }
 
     .gridCellActive {
-      background-color: black;
+      /* background-color: rgb(0, 89, 255); */
+      background-color: #ff6a06 ;
     }
+    .buttonControls button {
+      background-color:#00497c ;
+      color: #ffffff  ;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
     .gridCell {
-      border: 1px solid white;
-      background-color: #474747;
+      /* border: 1px solid white; */
+      border: 1px solid #2c2c2c;
+      /* background-color: #474747; */
+      background-color: #1e1e1e;
     }
 
     .gridCellActive {
-      background-color: #ffff00;
+      /* background-color: #00ffff; */
+      /* background-color: #4af6ff ; */
+      background-color: #64fc82 ;
+
     }
+
+    .buttonControls button {
+      background-color: #7148ec;
+      /* color: #333333 ; */
+      color: #ffffff;
+  }
+  
 }
