--- a/src/index.css
+++ b/src/index.css
@@ -30,40 +30,56 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.1rem;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ffffff;
 }
-button:focus,
+/* button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+  outline: 2px auto -webkit-focus-ring-color;
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #28567e;
-    background-color:#e5e5e5;
+    /* color: #28567e; */
+    color: #000000;
+    /* background-color:#e5e5e5; */
+    background-image: linear-gradient(to bottom, #ffffff, #eaeaea, #d6d6d6, #c2c2c2, #aeaeae);
+
   }
   button {
     color: #ffffff;
     background-color: #a0a0a0;
+  }
+  button:hover{
+    border-color: #fff;
   }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     color: #ffffff;
-    background-color: #191919;
+    /* background-color: #191919; */
+    /* background-color:  #121212 ; */
+
+    background-image: linear-gradient(to bottom, #000000, #080808, #0e0e0e, #141414, #181818);
   }
   button {
     background-color: #828282;
+  }
+  button:hover{
+    border-color: #929292;
   }
 }
